move controller and add endpoints
