# src/api/endpoints/capacity.py
@@ -1,0 +1,53 @@
+from src.controller.capacity_planning.backoffice import BackOfficeController
+from src.controller.capacity_planning.outbound_phone import OutboundPhoneController
+from src.controller.capacity_planning.inbound_chat import InboundChatController
+from src.controller.capacity_planning.inbound_phone import InboundPhoneController
+
+
+
+def inbound_phone_get_number_agents_for_service_level(body):
+    pass
+
+
+def inbound_phone_get_volume_for_service_level(body):
+    pass
+
+
+def inbound_phone_get_number_agents_for_average_waiting_time(body):
+    pass
+
+
+def inbound_phone_get_volume_for_average_waiting_time(body):
+    pass
+
+
+def inbound_chat_get_number_agents_for_service_level(body):
+    pass
+
+
+def inbound_chat_get_volume_for_service_level(body):
+    pass
+
+
+def inbound_chat_get_number_agents_for_average_waiting_time(body):
+    pass
+
+
+def inbound_chat_get_volume_for_average_waiting_time(body):
+    pass
+
+
+def outbound_phone_get_number_agents(body):
+    pass
+
+
+def outbound_phone_get_volume(body):
+    pass
+
+
+def backoffice_get_number_agents(body):
+    pass
+
+
+def backoffice_get_volume(body):
+    pass
